--- a/Css/style.css
+++ b/Css/style.css
@@ -44,9 +44,9 @@ h2 {
 
 p {
     font-size: 0.9rem;
-    font-weight: 300;
+    font-weight: 200;
     letter-spacing: 1px;
-    color: #8cc2a4;
+    color: #a0ecc1;
 }
 
 .w-92 {
@@ -92,13 +92,12 @@ header .navBar {
     align-items: center;
     width: 100%;
     height: 80px;
-    background-color: rgba(1, 12, 12, 0.5);
+    background-color: rgba(1, 12, 12);
     padding: 0px 70px;
     overflow: hidden;
     user-select: none;
     transition: 0.3s ease;
     z-index: 100;
-    backdrop-filter: blur(40px);
 }
 
 .navBar.sticky{
@@ -196,10 +195,10 @@ header .navBar {
 .aesthetic-element.left{
     position: fixed;
     left: 0;
-    top: 350px;
+    top: 330px;
     width: 360px;
     height: 360px;
-    opacity: 0.7;
+    opacity: 0.6;
     transform: translateX(-40%);
 }
 .aesthetic-element.right{
@@ -208,8 +207,17 @@ header .navBar {
     top: -160px;
     width: 660px;
     height: 660px;
-    opacity: 0.7;
-    transform: translateX(40%);
+    opacity: 0.6;
+    transform: translateX(46%);
+}
+.aesthetic-element.top{
+    position: fixed;
+    left: 50%;
+    top: -260px;
+    width: 700px;
+    height: 500px;
+    opacity: 0.5;
+    transform: translateX(-50%);
 }
 
 header .main-heading {
@@ -258,7 +266,7 @@ header .main-heading .buttons button {
     opacity: 0.9;
     border-radius: 30px;
     border: 1.5px groove #21e61e;
-    box-shadow: 0px 0px 1px 4px rgba(13, 235, 79, 0.5);
+    box-shadow: 0px 0px 0px 4px rgba(13, 235, 79, 0.5);
     cursor: pointer;
     transition: 0.3s ease;
 }
@@ -1941,7 +1949,7 @@ section.projects .project-card-wrapper .project-card{
     font-size: 17px;
     font-weight: 430px;
     word-spacing: 1px;
-    color: rgb(17, 97, 74);
+    color: rgb(150, 229, 207);
     padding: 4px 0;
 }
 
